resources/css/queries.css
/*big tablet to 1200px, width smaller than pixel row*/
@media only screen and (max-width: 1500px) {

    .logo {
    margin-left:0;
    }
    
    .main-nav{
    margin-right: 0;
    }

    h1{
        font-size:270%;
    }
    
    .hero-box{
        margin-left:-5%;
    }
    
    .subtitle{
        font-size:110%;
    }

}

/*big tablet to 1200px, width smaller than pixel row*/
@media only screen and (max-width: 1200px) {

    
    
    .hero-box {
        width: 100%;
        padding:0 2%;
        margin-left:0;
    }
    
    .row{ padding:0 2%; }

}

/*ipad in portrait mode 768-1023px*/
@media only screen and (max-width: 1023px) {

    body{ font-size:18px;}
    section{ padding: 60px 0;}
    
    .section-modular{
        padding: 100px 0;
    }
    
    .main-nav{display:block;}
    
    .future-proof-img{
        margin-left:1em;
        height:200px;
    }
    


}

/* small phones to small tablets 481-767px*/
@media only screen and (max-width: 767px) {
    
    body{font-size: 16px;}
    section{padding:30px 0;}
    
    .row,
    hero-box{padding:0, 3%;}
    
    .subtitle{
        padding:0 2%;
    }
    
    p{text-align: center}
    
    header p{text-align: left}
    
    .col{
        width:100%;
        margin:0 0 4% 0;
    }

    .logo{
        height:6vh;
    }
    
    .main-nav{display:none;}
    
    .main-nav{
        float:left;
        margin-top:15px;
        padding:10px 0;
        font-size:100%;
    }
    
    .main-nav li{
        display: block; 
    }
    
    .main-nav li a:link,
    .main-nav li a:visited{
        display: block; 
        border:0;
    }
    
    .sticky .main-nav{
        margin-top:1vh;
    }

    .sticky .main-nav li a:link,
    .sticky .main-nav li a:visited{padding: 1vh 0;}
    
    .sticky .mobile-nav-icon {margin-top: 1vh;}
    .sticky .mobile-nav-icon i{color:#555;}
    
    .mobile-nav-icon {
        display: inline-block;
    }
    
    h1{
        font-size:180%;
        margin-left:2%;
    }
    h2{font-size:150%;}
    h3{font-size:110%;}
    
    
    .section-modular{
        padding: 40px 0;
    }
    .modular-text{
        text-align:center;
    }
    
    .section-user-friendly{
        padding-top: 60px;
        padding-bottom: 20px;
    }
    
    .section-user-friendly h3{
        text-align: center;
    }

    .section-user-friendly p{
        text-align: left;
        margin:0 2%;
    }
    
    .section-future-proof h3{
        text-align: center;
    }

    .section-future-proof p{
        text-align: left;
        margin:0 2%;
    }
    
    .future-proof-text{
        padding:0;
    }
    
    .future-proof-img{
        margin:0 auto;
    }
    
    
    
}
    
/* small phones 0-480px */
@media only screen and (max-width: 480px){
    section{padding:25px 0;}
    

    .logo-colour{
        height:3vh;
        margin-top:11px;
    }
    
    
    .footer-nav{
    margin-left: 10%;
    }
    
    .social-links {
    list-style: none;
    float:left;
    margin-left: 30%;
    }   
    
    .config-img{
        height:200px;
    }
}

